# OpenIT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  cell.cpp  cell.h  field.cpp  field.h  game.cpp  game.h  main.cpp  player.cpp  player.h  playerone.cpp  playerone.h  playertwo.cpp  playertwo.h
.github/workflows/: build_linux.yml  build_windows.yml  clang-format.yml  copy-labels.yml
src/: CMakeLists.txt  common.h  field.cpp  field.h  game.cpp  game.h  io.cpp  io.h  main.cpp  player.cpp  player.h
test/: CMakeLists.txt  testfield.cpp  testgame.cpp  testplayer.cpp
